--- a/test.html
+++ b/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,14 +12,24 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <style>
-        .question-card, .result-card, .intro-card {
+        .question-card,
+        .result-card,
+        .intro-card {
+            display: none;
+        }
+
+        #nextButton {
             display: none;
         }
     </style>
 </head>
+
 <body>
     <div class="container mt-5">
         <h1 class="text-center">Take Test</h1>
+        <div id="testDatesContainer" class="text-center mt-4">
+            <p id="testDates"></p>
+        </div>
         <div id="introContainer" class="mt-4">
             <div class="card intro-card">
                 <div class="card-body">
@@ -35,7 +46,7 @@
                         <label for="class" class="form-label">Class</label>
                         <input type="text" class="form-control" id="class" required>
                     </div>
-                    <button class="btn btn-primary" onclick="startTest()">Start Test</button>
+                    <button class="btn btn-primary" id="startTestButton" onclick="startTest()">Start Test</button>
                 </div>
             </div>
         </div>
@@ -49,7 +60,6 @@
             <div class="card-body text-center">
                 <h3 class="card-title">Test Results</h3>
                 <p id="resultText"></p>
-                <button class="btn btn-primary" onclick="location.reload()">Retake Test</button>
             </div>
         </div>
     </div>
@@ -74,26 +84,75 @@
         let currentQuestionIndex = 0;
         let correctAnswers = 0;
         let userInfo = {};
+        let testStarted = false;
+        let testEnded = false;
+
+        let timerInterval;
+
 
         document.addEventListener('DOMContentLoaded', (event) => {
             const urlParams = new URLSearchParams(window.location.search);
             testId = urlParams.get('testId');
             userId = urlParams.get('uid');
-            document.querySelector('.intro-card').style.display = 'block';
+            loadTestDates();
         });
 
+        function loadTestDates() {
+            const testRef = firebase.database().ref(`/tests/${userId}/${testId}`);
+            testRef.once('value', (snapshot) => {
+                const test = snapshot.val();
+                if (test) {
+                    const startDate = new Date(test.startDate);
+                    const endDate = new Date(test.endDate);
+                    const currentDate = new Date();
+
+                    testStarted = currentDate >= startDate;
+                    testEnded = currentDate > endDate;
+
+                    document.getElementById('testDates').textContent = `Test is available from ${startDate.toLocaleDateString()} to ${endDate.toLocaleDateString()}`;
+
+                    if (!testStarted || testEnded) {
+                        document.getElementById('startTestButton').disabled = true;
+                        alert('The test is not currently available.');
+                    } else {
+                        document.querySelector('.intro-card').style.display = 'block';
+                    }
+                } else {
+                    alert('Test dates not available.');
+                }
+            });
+        }
+
         function startTest() {
-            const lastName = document.getElementById('lastName').value;
-            const firstName = document.getElementById('firstName').value;
-            const className = document.getElementById('class').value;
+            const lastName = document.getElementById('lastName').value.trim().toLowerCase();
+            const firstName = document.getElementById('firstName').value.trim().toLowerCase();
+            const className = document.getElementById('class').value.trim();
 
             if (lastName && firstName && className) {
-                userInfo = { lastName, firstName, class: className };
-                document.querySelector('.intro-card').style.display = 'none';
-                loadQuestions();
+                checkUserExists(firstName, lastName, className);
             } else {
                 alert('Please fill in all fields.');
             }
+        }
+
+        function checkUserExists(firstName, lastName, className) {
+            const resultsRef = firebase.database().ref(`/results/${userId}/${testId}`);
+            resultsRef.once('value', (snapshot) => {
+                let userExists = false;
+                snapshot.forEach((childSnapshot) => {
+                    const data = childSnapshot.val();
+                    if (data.userInfo.firstName.toLowerCase() === firstName && data.userInfo.lastName.toLowerCase() === lastName) {
+                        userExists = true;
+                    }
+                });
+                if (userExists) {
+                    alert('User with the same first and last name already exists.');
+                } else {
+                    userInfo = { lastName, firstName, class: className };
+                    document.querySelector('.intro-card').style.display = 'none';
+                    loadQuestions();
+                }
+            });
         }
 
         function loadQuestions() {
@@ -107,12 +166,36 @@
                     }
                 }
                 if (questions.length > 0) {
+                    startQuestionTimer(); // Start the timer for the first question
                     displayQuestion();
+                    document.getElementById('nextButton').style.display = 'block';
                 } else {
                     alert('No questions available.');
                 }
             });
         }
+
+        function startQuestionTimer() {
+            clearInterval(timerInterval); // Остановить предыдущий таймер, если он есть
+
+            const question = questions[currentQuestionIndex];
+            const timeInSeconds = question.timeInSeconds || 0; // Default to 0 if no time specified
+
+            let timer = timeInSeconds;
+            timerInterval = setInterval(() => {
+                timer--;
+
+                // Update timer display on your HTML
+                document.getElementById('timerDisplay').textContent = `Time Left: ${timer} seconds`;
+
+                if (timer <= 0) {
+                    clearInterval(timerInterval); // Stop the timer
+                    disableChoices(); // Disable choices if timer runs out
+                }
+            }, 1000); // Update every second
+        }
+
+
 
         function displayQuestion() {
             const questionContainer = document.getElementById('questionsContainer');
@@ -121,25 +204,37 @@
             const card = document.createElement('div');
             card.classList.add('card', 'question-card');
             card.innerHTML = `
-                <div class="card-body">
-                    <h5 class="card-title">Question ${currentQuestionIndex + 1}: ${question.text}</h5>
-                    ${question.choices.map((choice, i) => `
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="question${question.id}" id="choice${question.id}_${i}" value="${i}">
-                            <label class="form-check-label" for="choice${question.id}_${i}">
-                                ${choice.text}
-                            </label>
-                        </div>
-                    `).join('')}
+        <div class="card-body">
+            <h5 class="card-title">Question ${currentQuestionIndex + 1}: ${question.text}</h5>
+            <p id="timerDisplay">Time Left: ${question.timeInSeconds} seconds</p>
+            ${question.choices.map((choice, i) => `
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="question${question.id}" id="choice${question.id}_${i}" value="${i}">
+                    <label class="form-check-label" for="choice${question.id}_${i}">
+                        ${choice.text}
+                    </label>
                 </div>
-            `;
+            `).join('')}
+        </div>
+    `;
             questionContainer.appendChild(card);
             card.style.display = 'block';
 
             if (currentQuestionIndex === questions.length - 1) {
                 document.getElementById('nextButton').textContent = 'Submit';
             }
+
+            startQuestionTimer(); // Start timer for the current question
         }
+
+
+        function disableChoices() {
+            const inputs = document.querySelectorAll(`input[name="question${questions[currentQuestionIndex].id}"]`);
+            inputs.forEach(input => {
+                input.disabled = true;
+            });
+        }
+
 
         function nextQuestion() {
             const question = questions[currentQuestionIndex];
@@ -183,4 +278,5 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
