--- a/test.html
+++ b/test.html
@@ -64,6 +64,10 @@
         </div>
     </div>
 
+    <div class="container">
+        <p>made by <a href="yarchefis.ru">yarchefis</a></p>
+    </div>
+
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyC0HRay6-aZeGMWDacTWZe5UutG9dhPznE",
